# tdiff

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  _tdiff.zsh  build-android  config.h.in  configure.ac  configure.in  ent_key.h  ent_pair_cache.c  ent_pair_cache.h  ent_pair_cache_test.c  genhash.c  genhash.h  genhash_test.c  hard_links_cache.c  hard_links_cache.h  have_subsecond_times.c  inocache.c  inocache.h  inocache_test.c  linux_getdents.c  linux_getdents64.c  make_door.c  make_sock.c  st_xtime_ns.h  str_list.c  str_list.h  tdiff.1  tdiff.1.html  tdiff.bash  tdiff.c  (+6 more)
m4/: fi_automake_fragment.m4  fi_check_define.m4  fi_check_defines.m4  fi_check_egrep.m4  fi_check_identifier.m4  fi_check_identifiers.m4  fi_check_lib_for_sockets.m4  fi_check_shell_functions_dir.m4  fi_compiler_warnings.m4  fi_format_man.m4  fi_git_revision.m4  fi_link_ifelse.m4  fi_project.m4  fi_use_xnet.m4
tests/: acl.out.gold  acl.test  atime.out.gold  atime.test  blocks.out.gold  blocks.test  contents-always-diff.out.gold  contents-always-diff.test  contents-always.out.gold  contents-always.test  contents-exec.out.gold  contents-exec.test  contents.lib  contents.lib.sh  contents.out.gold  contents.test  ctime.out.gold  ctime.test  directories.out.gold  directories.test  ent_pair_cache.test  error-directory.out.gold  error-directory.test  error-file.out.gold  error-file.test  error-unowned-directory.test  error-unowned-file.out.gold  error-unowned-file1.test  error-unowned-file2.test  error-unreadable-directory.out.gold  error-unreadable-directory.test  error-unreadable-file.out.gold  error-unreadable-file.test  error-unwritable-directory.out.gold  error-unwritable-directory.test  error-unwritable-file.test  error.out.gold  error.test  exclude.out.gold  exclude.test  (+202 more)
